--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,12 @@
         <title>Flounce 0.0.1</title>
     </head>
     <body>
-        <script src="js/main.js"></script>
+    	<script type="text/javascript" src="js/phaser/phaser.min.js"></script>
+    	<script type="text/javascript" src="js/boot.js"></script>
+    	<script type="text/javascript" src="js/load.js"></script>
+    	<script type="text/javascript" src="js/menu.js"></script>
+    	<script type="text/javascript" src="js/play.js"></script>
+    	<script type="text/javascript" src="js/main.js"></script>
         <script></script>
         Hello world
     </body>
