--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
     	<script type="text/javascript" src="js/menu.js"></script>
     	<script type="text/javascript" src="js/play.js"></script>
     	<script type="text/javascript" src="js/main.js"></script>
+    	<script type="text/javascript" src="js/paddle.js"></script>
         <script></script>
         Hello world
     </body>
