Utils and Paddles.js
Added global utils. Added destroy method to paddles.

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,10 @@
         <title>Flounce 0.0.1</title>
     </head>
     <body>
+        <!-- Basic libraries -->
     	<script type="text/javascript" src="js/phaser/phaser.min.js"></script>
+    	<script type="text/javascript" src="js/utils.js"></script>
+    	<!-- Game libraries -->
     	<script type="text/javascript" src="js/boot.js"></script>
     	<script type="text/javascript" src="js/load.js"></script>
     	<script type="text/javascript" src="js/menu.js"></script>
