--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,11 @@
 <html>
     <head>
         <title>Flounce 0.0.1</title>
+        <style>
+            body {
+                margin: 0;
+            }
+        </style>
     </head>
     <body>
         <!-- Basic libraries -->
