Add the Entree class, the Niveau class. Wave class now working

--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,11 @@
     	<script type="text/javascript" src="js/Monster.js"></script>
     	<script type="text/javascript" src="js/monsters/Part.js"></script>
     	<script type="text/javascript" src="js/monsters/Guy.js"></script>
+        <script type="text/javascript" src="js/Wave.js"></script>
+        <script type="text/javascript" src="js/Niveau.js"></script>
+        <script type="text/javascript" src="js/Entree.js"></script>
+        <script type="text/javascript" src="js/Hero.js"></script>
+        <script type="text/javascript" src="js/GameData.js"></script>
     	<!-- Game libraries -->
     	<script type="text/javascript" src="js/boot.js"></script>
     	<script type="text/javascript" src="js/load.js"></script>
