--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,7 @@
     	<script type="text/javascript" src="js/menu.js"></script>
     	<script type="text/javascript" src="js/play.js"></script>
     	<script type="text/javascript" src="js/main.js"></script>
+    	<script type="text/javascript" src="js/level.js"></script>
     	
         <div id="gameDiv"></div>
     </body>
