Draft of level1.js

--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,7 @@
     	<script type="text/javascript" src="js/load.js"></script>
     	<script type="text/javascript" src="js/menu.js"></script>
     	<script type="text/javascript" src="js/play.js"></script>
+        <script type="text/javascript" src="js/level1State.js"></script>
     	<script type="text/javascript" src="js/main.js"></script>
     	
         <div id="gameDiv"></div>
