--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,7 @@
         <script type="text/javascript" src="js/Entree.js"></script>
         <script type="text/javascript" src="js/Hero.js"></script>
         <script type="text/javascript" src="js/GameData.js"></script>
+        <script type="text/javascript" src="js/Bumper.js"></script>
     	<!-- Game libraries -->
     	<script type="text/javascript" src="js/boot.js"></script>
     	<script type="text/javascript" src="js/load.js"></script>
