--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,7 @@
         <script type="text/javascript" src="js/Hero.js"></script>
         <script type="text/javascript" src="js/GameData.js"></script>
         <script type="text/javascript" src="js/Bumper.js"></script>
+        <script type="text/javascript" src="js/Hint.js"></script>
     	<!-- Game libraries -->
     	<script type="text/javascript" src="js/boot.js"></script>
     	<script type="text/javascript" src="js/load.js"></script>
