Panel test sample

--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,7 @@
     	<script type="text/javascript" src="js/phaser/phaser.min.js"></script>
     	<script type="text/javascript" src="js/utils.js"></script>
     	<!-- Classes -->
+    	<script type="text/javascript" src="js/Panel.js"></script>
     	<script type="text/javascript" src="js/Building.js"></script>
     	<script type="text/javascript" src="js/Paddle.js"></script>
     	<script type="text/javascript" src="js/Monster.js"></script>
