Add a labelButton class + bug fixing + probably smth else

--- a/public/index.html
+++ b/public/index.html
@@ -25,12 +25,14 @@
         <script type="text/javascript" src="js/GameData.js"></script>
         <script type="text/javascript" src="js/Bumper.js"></script>
         <script type="text/javascript" src="js/Hint.js"></script>
+        <script type="text/javascript" src="js/LabelButton.js"></script>
     	<!-- Game libraries -->
     	<script type="text/javascript" src="js/boot.js"></script>
     	<script type="text/javascript" src="js/load.js"></script>
     	<script type="text/javascript" src="js/menu.js"></script>
     	<script type="text/javascript" src="js/play.js"></script>
         <script type="text/javascript" src="js/level1State.js"></script>
+        <script type="text/javascript" src="js/gameStatsState.js"></script>
     	<script type="text/javascript" src="js/main.js"></script>
     	<script type="text/javascript" src="js/level.js"></script>
     	
