--- a/public/index.html
+++ b/public/index.html
@@ -37,6 +37,6 @@
     	<script type="text/javascript" src="js/main.js"></script>
     	<script type="text/javascript" src="js/level.js"></script>
     	
-        <div id="gameDiv"></div>
+        <div align="center" id="gameDiv"></div>
     </body>
 </html>
