--- a/public/index.html
+++ b/public/index.html
@@ -2,11 +2,7 @@
 <html>
     <head>
         <title>Flounce 0.0.1</title>
-        <style>
-            body {
-                margin: 0;
-            }
-        </style>
+        <link rel="stylesheet" href="css/stylesheet.css" type="text/css" />
     </head>
     <body>
         <!-- Basic libraries -->
