Sounds updated, TextTween in da place

--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,7 @@
         <script type="text/javascript" src="js/GameData.js"></script>
         <script type="text/javascript" src="js/Bumper.js"></script>
         <script type="text/javascript" src="js/Hint.js"></script>
+        <script type="text/javascript" src="js/TextHint.js"></script>
         <script type="text/javascript" src="js/LabelButton.js"></script>
     	<!-- Game libraries -->
     	<script type="text/javascript" src="js/boot.js"></script>
