--- a/public/index.html
+++ b/public/index.html
@@ -3,8 +3,15 @@
     <head>
         <title>Flounce 0.0.1</title>
         <link rel="stylesheet" href="css/stylesheet.css" type="text/css" />
+        <style type="text/css">
+            @import url(http://fonts.googleapis.com/css?family=Indie+Flower);
+            .hiddenText { font-family: Indie Flower; visibility: hidden;
+            }
+        </style>
+
     </head>
     <body>
+        <p class="hiddenText">.</p>
         <!-- Basic libraries -->
     	<script type="text/javascript" src="js/phaser/phaser.min.js"></script>
     	<script type="text/javascript" src="js/utils.js"></script>
