--- a/public/index.html
+++ b/public/index.html
@@ -9,30 +9,30 @@
     	<script type="text/javascript" src="js/phaser/phaser.min.js"></script>
     	<script type="text/javascript" src="js/utils.js"></script>
     	<!-- Classes -->
-    	<script type="text/javascript" src="js/Panel.js"></script>
-    	<script type="text/javascript" src="js/Building.js"></script>
-    	<script type="text/javascript" src="js/Paddle.js"></script>
-    	<script type="text/javascript" src="js/Monster.js"></script>
-    	<script type="text/javascript" src="js/monsters/Part.js"></script>
-    	<script type="text/javascript" src="js/monsters/Guy.js"></script>
-        <script type="text/javascript" src="js/Wave.js"></script>
-        <script type="text/javascript" src="js/Niveau.js"></script>
-        <script type="text/javascript" src="js/Entree.js"></script>
-        <script type="text/javascript" src="js/Hero.js"></script>
-        <script type="text/javascript" src="js/GameData.js"></script>
-        <script type="text/javascript" src="js/Bumper.js"></script>
-        <script type="text/javascript" src="js/Hint.js"></script>
-        <script type="text/javascript" src="js/TextHint.js"></script>
-        <script type="text/javascript" src="js/LabelButton.js"></script>
+    	<script type="text/javascript" src="js/class/buildings/Panel.js"></script>
+    	<script type="text/javascript" src="js/class/buildings/Building.js"></script>
+    	<script type="text/javascript" src="js/class/buildings/Paddle.js"></script>
+    	<script type="text/javascript" src="js/class/monsters/Monster.js"></script>
+    	<script type="text/javascript" src="js/class/monsters/Part.js"></script>
+    	<script type="text/javascript" src="js/class/monsters/Guy.js"></script>
+        <script type="text/javascript" src="js/class/Wave.js"></script>
+        <script type="text/javascript" src="js/class/Niveau.js"></script>
+        <script type="text/javascript" src="js/class/Entree.js"></script>
+        <script type="text/javascript" src="js/class/Hero.js"></script>
+        <script type="text/javascript" src="js/class/GameData.js"></script>
+        <script type="text/javascript" src="js/class/buildings/Bumper.js"></script>
+        <script type="text/javascript" src="js/class/hints/Hint.js"></script>
+        <script type="text/javascript" src="js/class/hints/TextHint.js"></script>
+        <script type="text/javascript" src="js/class/LabelButton.js"></script>
     	<!-- Game libraries -->
-    	<script type="text/javascript" src="js/boot.js"></script>
-    	<script type="text/javascript" src="js/load.js"></script>
-    	<script type="text/javascript" src="js/menu.js"></script>
-    	<script type="text/javascript" src="js/play.js"></script>
-        <script type="text/javascript" src="js/level1State.js"></script>
-        <script type="text/javascript" src="js/gameStatsState.js"></script>
-    	<script type="text/javascript" src="js/main.js"></script>
-    	<script type="text/javascript" src="js/level.js"></script>
+    	<script type="text/javascript" src="js/states/boot.js"></script>
+    	<script type="text/javascript" src="js/states/load.js"></script>
+    	<script type="text/javascript" src="js/states/menu.js"></script>
+    	<script type="text/javascript" src="js/states/play.js"></script>
+        <script type="text/javascript" src="js/states/level1State.js"></script>
+        <script type="text/javascript" src="js/states/gameStatsState.js"></script>
+    	<script type="text/javascript" src="js/states/main.js"></script>
+    	<script type="text/javascript" src="js/states/level.js"></script>
     	
         <div align="center" id="gameDiv"></div>
     </body>
