Spacebar works to start a new wave

--- a/public/index.html
+++ b/public/index.html
@@ -28,11 +28,10 @@
     	<script type="text/javascript" src="js/states/boot.js"></script>
     	<script type="text/javascript" src="js/states/load.js"></script>
     	<script type="text/javascript" src="js/states/menu.js"></script>
-    	<script type="text/javascript" src="js/states/play.js"></script>
         <script type="text/javascript" src="js/states/level1State.js"></script>
         <script type="text/javascript" src="js/states/gameStatsState.js"></script>
     	<script type="text/javascript" src="js/states/main.js"></script>
-    	<script type="text/javascript" src="js/states/level.js"></script>
+        <script type="text/javascript" src="js/states/loosingState.js"></script>
     	
         <div align="center" id="gameDiv"></div>
     </body>
