--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
     	<script type="text/javascript" src="js/utils.js"></script>
     	<!-- Classes -->
     	<script type="text/javascript" src="js/class/buildings/Panel.js"></script>
+        <script type="text/javascript" src="js/class/buildings/InfoPanel.js"></script>
     	<script type="text/javascript" src="js/class/buildings/Building.js"></script>
     	<script type="text/javascript" src="js/class/buildings/Paddle.js"></script>
     	<script type="text/javascript" src="js/class/monsters/Monster.js"></script>
