Nice InfoPanel, TowerPanel to come...

--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
     <head>
-        <title>Flounce 0.0.1</title>
+        <title>Flounce 0.1.0</title>
         <link rel="stylesheet" href="css/stylesheet.css" type="text/css" />
     </head>
     <body>
@@ -36,4 +36,5 @@
     	
         <div align="center" id="gameDiv"></div>
     </body>
+    <div class="hiddenText">.</div>
 </html>
