--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,7 @@
     	<!-- Classes -->
     	<script type="text/javascript" src="js/class/buildings/Panel.js"></script>
         <script type="text/javascript" src="js/class/buildings/InfoPanel.js"></script>
+        <script type="text/javascript" src="js/class/buildings/TowerPanel.js"></script>
     	<script type="text/javascript" src="js/class/buildings/Building.js"></script>
     	<script type="text/javascript" src="js/class/buildings/Paddle.js"></script>
     	<script type="text/javascript" src="js/class/monsters/Monster.js"></script>
