onMouseOver description + better TextHint, onMouseOver button to come

--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,9 @@
     <head>
         <title>Flounce 0.1.0</title>
         <link rel="stylesheet" href="css/stylesheet.css" type="text/css" />
+        <link href='http://fonts.googleapis.com/css?family=Indie+Flower' rel='stylesheet' type='text/css'>
     </head>
+
     <body>
         <!-- Basic libraries -->
     	<script type="text/javascript" src="js/phaser/phaser.min.js"></script>
@@ -38,5 +40,7 @@
     	
         <div align="center" id="gameDiv"></div>
     </body>
-    <div class="hiddenText">.</div>
+    <span class="hiddenText">.</span>
+    <span class="hiddenText2">.</span>
+    <span class="hiddenText3">.</span>
 </html>
