--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,7 @@
         <script type="text/javascript" src="js/class/buildings/Bumper.js"></script>
         <script type="text/javascript" src="js/class/hints/Hint.js"></script>
         <script type="text/javascript" src="js/class/hints/TextHint.js"></script>
+        <script type="text/javascript" src="js/class/hints/dragDrop.js"></script>
         <script type="text/javascript" src="js/class/LabelButton.js"></script>
     	<!-- Game libraries -->
     	<script type="text/javascript" src="js/states/boot.js"></script>
