--- a/public/index.html
+++ b/public/index.html
@@ -41,7 +41,9 @@
     	
         <div align="center" id="gameDiv"></div>
     </body>
+    <div id="hidden">
     <span class="hiddenText">.</span>
     <span class="hiddenText2">.</span>
     <span class="hiddenText3">.</span>
+    </div>
 </html>
