--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,7 @@
         <script type="text/javascript" src="js/class/buildings/TowerPanel.js"></script>
     	<script type="text/javascript" src="js/class/buildings/Building.js"></script>
     	<script type="text/javascript" src="js/class/buildings/Paddle.js"></script>
+    	<script type="text/javascript" src="js/class/buildings/Unblock.js"></script>
     	<script type="text/javascript" src="js/class/monsters/Monster.js"></script>
 
     	<script type="text/javascript" src="js/class/monsters/Guy.js"></script>
