beginning of the new mode Max Bump (not working yet)+ princess moves

--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
     <head>
-        <title>Flounce 0.1.0</title>
+        <title>Flounce 0.1.8</title>
         <link rel="stylesheet" href="css/stylesheet.css" type="text/css" />
         <link href='http://fonts.googleapis.com/css?family=Indie+Flower' rel='stylesheet' type='text/css'>
     </head>
@@ -17,6 +17,7 @@
     	<script type="text/javascript" src="js/class/buildings/Paddle.js"></script>
     	<script type="text/javascript" src="js/class/buildings/Unblock.js"></script>
     	<script type="text/javascript" src="js/class/monsters/Monster.js"></script>
+        <script type="text/javascript" src="js/class/buildings/MonsterInfoPanel.js"></script>
 
     	<script type="text/javascript" src="js/class/monsters/Guy.js"></script>
     	<script type="text/javascript" src="js/class/monsters/Skeleton.js"></script>
@@ -39,6 +40,7 @@
         <script type="text/javascript" src="js/states/gameStatsState.js"></script>
     	<script type="text/javascript" src="js/states/main.js"></script>
         <script type="text/javascript" src="js/states/loosingState.js"></script>
+        <script type="text/javascript" src="js/states/maxBump.js"></script>
     	
         <div align="center" id="gameDiv"></div>
     </body>
