Brand new design (and refactor for the end screen

--- a/public/index.html
+++ b/public/index.html
@@ -41,6 +41,7 @@
     	<script type="text/javascript" src="js/states/main.js"></script>
         <script type="text/javascript" src="js/states/loosingState.js"></script>
         <script type="text/javascript" src="js/states/maxBump.js"></script>
+        <script type="text/javascript" src="js/states/endState.js"></script>
     	
         <div align="center" id="gameDiv"></div>
     </body>
