--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,7 @@
         <script type="text/javascript" src="js/class/buildings/InfoPanel.js"></script>
         <script type="text/javascript" src="js/class/buildings/TowerPanel.js"></script>
     	<script type="text/javascript" src="js/class/buildings/Building.js"></script>
+    	<script type="text/javascript" src="js/class/buildings/Saw.js"></script>
     	<script type="text/javascript" src="js/class/buildings/Paddle.js"></script>
     	<script type="text/javascript" src="js/class/buildings/Unblock.js"></script>
     	<script type="text/javascript" src="js/class/monsters/Monster.js"></script>
