--- a/public/index.html
+++ b/public/index.html
@@ -42,6 +42,7 @@
     	<script type="text/javascript" src="js/states/main.js"></script>
         <script type="text/javascript" src="js/states/maxBump.js"></script>
         <script type="text/javascript" src="js/states/endState.js"></script>
+        <script type="text/javascript" src="js/states/creditState.js"></script>
     	
         <div align="center" id="gameDiv"></div>
     </body>
