--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,7 @@
     	<script type="text/javascript" src="js/class/monsters/Guy.js"></script>
     	<script type="text/javascript" src="js/class/monsters/Skeleton.js"></script>
     	<script type="text/javascript" src="js/class/monsters/Rubick.js"></script>
+    	<script type="text/javascript" src="js/class/monsters/Ghost.js"></script>
     	
         <script type="text/javascript" src="js/class/Wave.js"></script>
         <script type="text/javascript" src="js/class/Niveau.js"></script>
