--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,7 @@
     	<script type="text/javascript" src="js/class/buildings/Saw.js"></script>
     	<script type="text/javascript" src="js/class/buildings/Paddle.js"></script>
     	<script type="text/javascript" src="js/class/buildings/Unblock.js"></script>
+    	<script type="text/javascript" src="js/class/buildings/Blocker.js"></script>
     	<script type="text/javascript" src="js/class/monsters/Monster.js"></script>
         <script type="text/javascript" src="js/class/buildings/MonsterInfoPanel.js"></script>
 
