Names translated to english

--- a/public/index.html
+++ b/public/index.html
@@ -26,8 +26,8 @@
     	<script type="text/javascript" src="js/class/monsters/Ghost.js"></script>
     	
         <script type="text/javascript" src="js/class/Wave.js"></script>
-        <script type="text/javascript" src="js/class/Niveau.js"></script>
-        <script type="text/javascript" src="js/class/Entree.js"></script>
+        <script type="text/javascript" src="js/class/Level.js"></script>
+        <script type="text/javascript" src="js/class/Entrance.js"></script>
         <script type="text/javascript" src="js/class/Hero.js"></script>
         <script type="text/javascript" src="js/class/GameData.js"></script>
         <script type="text/javascript" src="js/class/buildings/Bumper.js"></script>
